--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "juzaweb/ticket-support",
+    "homepage": "https://juzaweb.com",
+    "type": "juzaweb-plugin",
+    "license": "MIT",
     "description": "Make and managment Ticket support easy for Juzaweb CMS",
     "extra": {
         "juzaweb": {
@@ -16,5 +19,9 @@
         "psr-4": {
             "Juzaweb\\TicketSupport\\": "src/"
         }
+    },
+    "require-dev": {
+        "juzaweb/modules": "^1.0",
+        "juzaweb/dev-tool": "^1.0"
     }
 }
