--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
             "Juzaweb\\TicketSupport\\": "src/"
         }
     },
-    "require": {
+    "require-dev": {
         "juzaweb/modules": "^1.0",
         "juzaweb/dev-tool": "^1.0"
     }
